welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:2: error: value =! is not a member of Int
while (nbBiscuit=!4) {
                ^